# sp_chat_ai_core_yamabiko

./: .gitignore  .tool-versions  pyproject.toml  requirements.txt
sp_chat_ai_core/: google_secret_manager.py  product_terms.json  retriever_adk_bq.py  support_operation_agent.py
sp_chat_ai_core.egg-info/: PKG-INFO  SOURCES.txt
sp_chat_ai_core_yamabiko/: __init__.py  bigquery_logger_for_yamabiko.py  chat_engine_adk_bq.py  chat_memory.py  firestore_memory.py  firestore_memory_yamabiko.py  retriever_adk_bq.py  smoke_import_test.py  support_operation_agent.py
sp_chat_ai_core_yamabiko.egg-info/: requires.txt  top_level.txt
